Sligh fix for vertical alignment

--- a/transport-projekat-frontend/src/app/app.component.css
+++ b/transport-projekat-frontend/src/app/app.component.css
@@ -190,7 +190,7 @@
 
 .center-vertical {
   margin-top: auto;
-  margin-bottom:auto;
+  margin-bottom:auto !important;
 }
 
 .center-horizontal {
